--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169331">Python’s For - Else</a>
+                                    <a href="https://news.ycombinator.com/item?id=17159497">Ghostery exposed everyone's email address in its GDPR email by not using BCC</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://book.pythontips.com/en/latest/for_-_else.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 22:01:52 &nbsp;•&nbsp;
-                                    147 comments &nbsp;•&nbsp;
-                                    276.0 points
+                                    <a class="node" href="https://www.reddit.com/r/technology/comments/8m45k6/ghostery_have_exposed_everyones_email_address_in/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=rexbee">rexbee</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 01:10:31 &nbsp;•&nbsp;
+                                    57 comments &nbsp;•&nbsp;
+                                    278.0 points
                                 </span>
                             </td>
                         </tr>
@@ -314,7 +314,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=erric">erric</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 12:26:48 &nbsp;•&nbsp;
                                     57 comments &nbsp;•&nbsp;
-                                    209.0 points
+                                    210.0 points
                                 </span>
                             </td>
                         </tr>
@@ -373,7 +373,7 @@
                                     <a class="node" href="https://www.bloomberg.com/news/features/2018-03-15/this-multibillion-dollar-corporation-is-controlled-by-a-penniless-yoga-superstar">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 05:18:04 &nbsp;•&nbsp;
-                                    110 comments &nbsp;•&nbsp;
+                                    111 comments &nbsp;•&nbsp;
                                     187.0 points
                                 </span>
                             </td>
@@ -494,7 +494,27 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=radomir_cernoch">radomir_cernoch</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 17:28:59 &nbsp;•&nbsp;
                                     85 comments &nbsp;•&nbsp;
-                                    166.0 points
+                                    167.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17165800">Oracle plans to dump risky Java serialization</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.infoworld.com/article/3275924/java/oracle-plans-to-dump-risky-java-serialization.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=s-macke">s-macke</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 06:44:02 &nbsp;•&nbsp;
+                                    80 comments &nbsp;•&nbsp;
+                                    165.0 points
                                 </span>
                             </td>
                         </tr>
@@ -515,26 +535,6 @@
                                     2018-05-27 04:49:51 &nbsp;•&nbsp;
                                     110 comments &nbsp;•&nbsp;
                                     165.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165800">Oracle plans to dump risky Java serialization</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.infoworld.com/article/3275924/java/oracle-plans-to-dump-risky-java-serialization.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=s-macke">s-macke</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 06:44:02 &nbsp;•&nbsp;
-                                    80 comments &nbsp;•&nbsp;
-                                    161.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 06:50:03.849978</strong>
+            <strong>Last update at 2018-05-28 07:00:03.046654</strong>
         </div>
     </div>
 </div>
