--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -366,6 +366,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17166752">Syncing data using advanced SQL and Perl</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://domm.plix.at/perl/2018_05_syncing_data_via_advanced_sql.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=domm_plix">domm_plix</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 13:10:36 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    4.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17166601">Is the Earth flat? Meet the people questioning science</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -453,26 +473,6 @@
                                     <a class="node" href="https://eprint.iacr.org/2015/938.pdf">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=epistemex">epistemex</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 06:06:21 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    3.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170764">In 2018, Windows died at home and nobody cared</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.zdnet.com/article/in-2018-windows-died-at-home-and-nobody-cared/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Tuldok">Tuldok</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 05:43:36 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     3.0 points
                                 </span>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 07:00:03.046654</strong>
+            <strong>Last update at 2018-05-28 07:10:03.278423</strong>
         </div>
     </div>
 </div>
