--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169758">Gardner Dozois has died</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://twitter.com/MichaelSwanwick/status/1000849132230184961">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ohjeez">ohjeez</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 23:31:37 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
-                                    4.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169127">Slidefy: Create slides when you're in a hurry, but you want them to look good</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -446,6 +426,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17170902">How Britain came within hours of the 'breakdown of law and order' in 2008</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://www.businessinsider.com/alistair-darling-uk-breakdown-of-law-and-order-financial-crisis-2018-5">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lnguyen">lnguyen</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 06:38:34 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    3.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17170804">Prepping for Quantum Computing: Introduction to Lattice Based Cryptography [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 07:20:03.433353</strong>
+            <strong>Last update at 2018-05-28 07:30:03.609829</strong>
         </div>
     </div>
 </div>
