--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17170185">Generative adversarial network in 70 lines of Julia</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://github.com/ekinakyurek/GAN-70-Lines-of-Julia/blob/master/gan.jl">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=sndean">sndean</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 01:54:02 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    6.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17170126">Chess.com Acquires Komodo; Launches New 'Monte Carlo' Version</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -226,13 +246,13 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166450">Plainbudget: Minimalist Plain Text Budgeting</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166824">MIT Physicists Develop 5 Times More Efficient Thermoelectric Material</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://galvez.github.io/plainbudget/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=jgalvez">jgalvez</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 11:20:48 &nbsp;•&nbsp;
+                                    <a class="node" href="https://news.mit.edu/2018/materials-heated-magnetic-fields-thermoelectrics-0525">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=el_duderino">el_duderino</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 13:34:20 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     6.0 points
                                 </span>
@@ -246,15 +266,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170764">In 2018, Windows died at home and nobody cared</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166450">Plainbudget: Minimalist Plain Text Budgeting</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.zdnet.com/article/in-2018-windows-died-at-home-and-nobody-cared/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Tuldok">Tuldok</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 05:43:36 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
-                                    5.0 points
+                                    <a class="node" href="https://galvez.github.io/plainbudget/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jgalvez">jgalvez</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 11:20:48 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    6.0 points
                                 </span>
                             </td>
                         </tr>
@@ -334,26 +354,6 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 16:32:42 &nbsp;•&nbsp;
                                     2 comments &nbsp;•&nbsp;
-                                    5.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166824">MIT Physicists Develop 5 Times More Efficient Thermoelectric Material</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://news.mit.edu/2018/materials-heated-magnetic-fields-thermoelectrics-0525">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=el_duderino">el_duderino</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 13:34:20 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
                                     5.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 08:10:03.249159</strong>
+            <strong>Last update at 2018-05-28 08:20:03.795112</strong>
         </div>
     </div>
 </div>
