--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17166861">Writing self-documenting Swift code</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.swiftbysundell.com/posts/writing-self-documenting-swift-code">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 13:45:25 &nbsp;•&nbsp;
+                                    18 comments &nbsp;•&nbsp;
+                                    70.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169810">Empiricism and the limits of gradient descent</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -206,26 +226,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170733">An embedded database written in Rust</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://github.com/spacejam/sled">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=mountainview">mountainview</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 05:32:28 &nbsp;•&nbsp;
-                                    21 comments &nbsp;•&nbsp;
-                                    67.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17166516">Homespring – A Metaphor Oriented Programming Language</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -234,7 +234,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=EvergreenTree">EvergreenTree</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 11:46:17 &nbsp;•&nbsp;
                                     15 comments &nbsp;•&nbsp;
-                                    62.0 points
+                                    63.0 points
                                 </span>
                             </td>
                         </tr>
@@ -273,7 +273,7 @@
                                     <a class="node" href="https://www.propublica.org/article/why-your-health-insurer-does-not-care-about-your-big-bills">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=joveian">joveian</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 01:57:38 &nbsp;•&nbsp;
-                                    21 comments &nbsp;•&nbsp;
+                                    22 comments &nbsp;•&nbsp;
                                     54.0 points
                                 </span>
                             </td>
@@ -434,7 +434,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=mondgott">mondgott</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 19:34:04 &nbsp;•&nbsp;
                                     5 comments &nbsp;•&nbsp;
-                                    24.0 points
+                                    25.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 08:30:03.019127</strong>
+            <strong>Last update at 2018-05-28 08:40:03.679773</strong>
         </div>
     </div>
 </div>
