--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170126">Chess.com Acquires Komodo; Launches New 'Monte Carlo' Version</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.chess.com/news/view/chess-com-acquires-komodo-launches-new-monte-carlo-version-similar-to-alphazero">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=poster123">poster123</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 01:30:40 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    6.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169563">Rosewood massacre</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -546,6 +526,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17169559">Would You Have Hired Steve Jobs?</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://medium.com/@ken.roman_84029/would-you-have-hired-steve-jobs-53af3a5176e6">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=SQL2219">SQL2219</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 22:52:43 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    4.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169127">Slidefy: Create slides when you're in a hurry, but you want them to look good</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 08:30:03.019127</strong>
+            <strong>Last update at 2018-05-28 08:40:03.679773</strong>
         </div>
     </div>
 </div>
