--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -174,7 +174,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 07:55:16 &nbsp;•&nbsp;
                                     32 comments &nbsp;•&nbsp;
-                                    165.0 points
+                                    167.0 points
                                 </span>
                             </td>
                         </tr>
@@ -353,7 +353,7 @@
                                     <a class="node" href="https://www.patternfly.org/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=1023bytes">1023bytes</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 11:48:35 &nbsp;•&nbsp;
-                                    72 comments &nbsp;•&nbsp;
+                                    73 comments &nbsp;•&nbsp;
                                     148.0 points
                                 </span>
                             </td>
@@ -486,6 +486,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17166934">Hotelling’s Law (2011)</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.uh.edu/engines/epi2692.htm">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 14:09:42 &nbsp;•&nbsp;
+                                    35 comments &nbsp;•&nbsp;
+                                    121.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17152440">The forgotten 80s home robot trend</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -506,15 +526,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166934">Hotelling’s Law (2011)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17169080">Top Mistakes and Learnings from My Startup: Postmortem Samsamia</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.uh.edu/engines/epi2692.htm">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 14:09:42 &nbsp;•&nbsp;
-                                    35 comments &nbsp;•&nbsp;
-                                    119.0 points
+                                    <a class="node" href="https://miguelgfierro.com/blog/2018/top-mistakes-and-learnings-from-my-startup-postmortem-samsamia/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=hoaphumanoid">hoaphumanoid</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 21:00:55 &nbsp;•&nbsp;
+                                    48 comments &nbsp;•&nbsp;
+                                    118.0 points
                                 </span>
                             </td>
                         </tr>
@@ -535,26 +555,6 @@
                                     2018-05-27 11:15:13 &nbsp;•&nbsp;
                                     44 comments &nbsp;•&nbsp;
                                     118.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17164822">The emotional journey of creating anything great</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://twitter.com/Bill_Gross/status/1000211381109469184?s=20">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=gballan">gballan</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 00:00:50 &nbsp;•&nbsp;
-                                    29 comments &nbsp;•&nbsp;
-                                    117.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 08:30:03.019127</strong>
+            <strong>Last update at 2018-05-28 08:40:03.679773</strong>
         </div>
     </div>
 </div>
